--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.18.0",
