--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "chart.js": "^4.4.0",
+    "crypto-js": "^4.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
