--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap-icons": "^1.11.1",
     "chart.js": "^4.4.0",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
