--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "swagger-jsdoc": "^6.2.8",
